# MID

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: pyproject.toml
bot/: main.py
config/: .env.example  storage.json
events/: alembic.ini  core.py  events.json  events_test.json  main.py  new_parser.py  schemas.py  schemes.py  settings.py  test.py
events/api/: schema.py
events/api/handlers/: __init__.py  base.py  events.py
events/db/: __main__.py  schema.py
events/db/alembic/: env.py
events/db/alembic/versions/: 1fd9d5461b4a_fix.py  756bb42fb73f_initial.py  7f83b7a3fa46_initial.py
events/parsers/: __init__.py  yandex.py
events/utils/: http_sender.py  local_storage.py  manager.py  parser.py  rmq_sender.py  sender.py
mid/: __main__.py  pyproject.toml
mid/src/: settings.py
mid/src/handlers/: commands.py
mid/src/handlers/admin/: sources.py
mid/src/handlers/users/: about.py
mid/src/keyboards/: users.py
mid/src/middlewares/: auth.py
mid/src/states/: new_source.py
mid/src/static/: storage.json  texts.py
mid/src/tools/: manager.py
