[tool.poetry]
name = "mid"
version = "0.1.0"
description = "Schedule service for checking companies websites on new meetup events"
authors = ["Flict-dev <zhdanom.maksi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.3.0"
aiohttp = "^3.9.3"
redis = "^5.0.1"
msgspec = "^0.18.6"
lxml = "^5.1.0"
python-decouple = "^3.8"
pydantic-settings = "^2.2.0"
dateparser = "^1.2.0"
user-agent = "^0.1.10"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
pre-commit = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
